--- a/frontend/css/templatemo-style.css
+++ b/frontend/css/templatemo-style.css
@@ -224,6 +224,99 @@ ul {
 .mobile-menu-icon { display: none; }
 .tm-section { margin-bottom: 60px; }
 .tm-section-margin-bottom-0 { margin-bottom: 0; }
+/* Cart  */
+.wrap-cart{
+
+  position: fixed;
+
+  bottom: 4rem;
+  right: 4rem;
+
+  z-index: 10;
+}
+.cart{
+  position: relative;
+
+  background-color: #fff;
+
+  padding: 10px;
+
+  border-radius: 50%;
+
+  transition-duration: 1s;
+
+  cursor: pointer;
+}
+.cart:hover {
+  transform: scale(1.1,1.1);
+}
+.cart-notify{
+  position: absolute;
+  left: 70%;
+  bottom: 70%;
+  height: 24px;
+  width: 24px;
+
+  padding: 2px;
+
+  background-color: rgb(255,0,0);
+  color: #fff;
+
+  clip-path: circle(50%);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  overflow: hidden;
+}
+.icon-cart{
+  font-size: 32px;
+}
+/* popups cart  */
+.wrap-popups-cart{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  min-height: 500px;
+  width: 700px;
+
+  padding: 20px;
+
+  position: fixed;
+
+  top: 50vh;
+  left: 50%;
+
+  transform: translate(-50%,-50%);
+
+  border-radius: 20px;
+  border: 1px solid rgb(253, 217, 57);
+
+
+  background-color: rgb(254, 255, 247);
+
+  z-index: 10;
+
+}
+.dash-popups{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: #000;
+  font-size: 30px;
+
+  cursor: pointer;
+}
+.outline:focus, .outline:active{
+  outline: none!important;
+}
+
+.text-title{
+  text-align: center;
+  font-weight: bold;
+}
 
 /* Welcome */
 .tm-welcome-section {
@@ -657,12 +750,46 @@ ol li:before {
 
 .form-control {
   border-color: #c79c60;
-  border-radius: 10px;
+  width: 60px;
+  border-radius: 0;
 }
 .form-control:focus { 
+  border-color: #c79c60; 
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6); 
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6);
+}
+.form-control::-webkit-inner-spin-button,
+.form-control::-webkit-outer-spin-button{
+  -webkit-appearance: none;
+}
+
+
+.form-control-concat {
+  border: 1px solid #c79c60;
+  border-radius: 10px;
+  width:100%;
+  outline: none;
+  padding: 6px 12px;
+}
+.form-control-concat:focus { 
   border-color: rgb(136, 93, 33); 
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6); 
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6);
+}
+
+.quantity-btn{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.arrow{
+  height: 34px;
+  width: 30px;
+  border: 1px solid #c79c60;
+}
+.arrow:active{
+  background-color: rgb(221, 221, 221);
 }
 button.tm-more-button {
   background-color: transparent;
