--- a/src/views/frontend/index.html
+++ b/src/views/frontend/index.html
@@ -11,11 +11,12 @@ http://www.templatemo.com/tm-466-cafe-house
 -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Damion' rel='stylesheet' type='text/css'>
-  <link href="./public/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../../public/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../../public/css/all.css" rel="stylesheet">
-  <link href="../../public/css/templatemo-style.css" rel="stylesheet">
-  <link rel="shortcut icon" href="../../public/img/favicon.ico" type="image/x-icon" />
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/templatemo-style.css" rel="stylesheet">
+  <link href="css/all.css" rel="stylesheet">
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -136,7 +137,7 @@ http://www.templatemo.com/tm-466-cafe-house
           <div class="tm-top-header-inner">
             <div class="tm-logo-container">
               <a href="/">
-                <img src="../../public/img/logo.png" alt="Logo" class="tm-site-logo">
+                <img src="img/logo.png" alt="Logo" class="tm-site-logo">
                 <h1 class="tm-site-name tm-handwriting-font">Cafe House</h1>
               </a>
             </div>
@@ -159,19 +160,19 @@ http://www.templatemo.com/tm-466-cafe-house
     <section class="tm-welcome-section">
       <div class="container tm-position-relative">
         <div class="tm-lights-container">
-          <img src="../../public/img/light.png" alt="Light" class="light light-1">
-          <img src="../../public/img/light.png" alt="Light" class="light light-2">
-          <img src="../../public/img/light.png" alt="Light" class="light light-3">  
+          <img src="img/light.png" alt="Light" class="light light-1">
+          <img src="img/light.png" alt="Light" class="light light-2">
+          <img src="img/light.png" alt="Light" class="light light-3">  
         </div>        
         <div class="row tm-welcome-content">
-          <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="../../public/img/header-line.png" alt="Line" class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="../../public/img/header-line.png" alt="Line" class="tm-header-line"></h2>
+          <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="img/header-line.png" alt="Line" class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="img/header-line.png" alt="Line" class="tm-header-line"></h2>
           <h2 class="gold-text tm-welcome-header-2">Cafe House</h2>
           <p class="gray-text tm-welcome-description">
             Cafe House chuyên cung cấp các thức uống về cafe ! Ngon bổ rẻ ba la ba la vân vân và mây mây....
           </p>
           <a href="#main" class="tm-more-button tm-more-button-welcome">Details</a>      
         </div>
-        <img src="../../public/img/table-set.png" alt="Table Set" class="tm-table-set img-responsive">             
+        <img src="img/table-set.png" alt="Table Set" class="tm-table-set img-responsive">             
       </div>      
     </section>
     <div class="tm-main-section light-gray-bg">
@@ -187,18 +188,18 @@ http://www.templatemo.com/tm-466-cafe-house
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
             <div class="inline-block shadow-img">
-              <img src="../../public/img/1.jpg" alt="Image" class="img-circle img-thumbnail">  
+              <img src="img/1.jpg" alt="Image" class="img-circle img-thumbnail">  
             </div>              
           </div>            
         </section>          
         <section class="tm-section tm-section-margin-bottom-0 row">
           <div class="col-lg-12 tm-section-header-container">
-            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="../../public/img/logo.png" alt="Logo" class="tm-site-logo"> Popular Items</h2>
+            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Popular Items</h2>
             <div class="tm-hr-container"><hr class="tm-hr"></div>
           </div>
           <div class="col-lg-12 tm-popular-items-container">
             <div class="tm-popular-item">
-              <img src="../../public/img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">a</span>mericano</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -208,7 +209,7 @@ http://www.templatemo.com/tm-466-cafe-house
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="../../public/img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">c</span>appuccino</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -218,7 +219,7 @@ http://www.templatemo.com/tm-466-cafe-house
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="../../public/img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">m</span>ocha</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -231,14 +232,14 @@ http://www.templatemo.com/tm-466-cafe-house
         </section>
         <section class="tm-section row">
           <div class="col-lg-12 tm-section-header-container">
-            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="../../public/img/logo.png" alt="Logo" class="tm-site-logo"> Today's Special</h2>
+            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Today's Special</h2>
             <div class="tm-hr-container"><hr class="tm-hr"></div>
           </div>          
           <div class="col-lg-12 tm-special-container margin-top-60">
             <div class="tm-special-container-left"> <!-- left -->
               <div class="tm-special-item">
                 <div class="tm-special-img-container">
-                  <img src="../../public/img/special-1.jpg" alt="Special" class="tm-special-img img-responsive">  
+                  <img src="img/special-1.jpg" alt="Special" class="tm-special-img img-responsive">  
                   <a href="#">
                     <div class="tm-special-description">
                       <h3 class="tm-special-title">Donec pede justo</h3>
@@ -252,7 +253,7 @@ http://www.templatemo.com/tm-466-cafe-house
               <div>
                 <div class="tm-special-item">
                   <div class="tm-special-img-container">
-                    <img src="../../public/img/special-2.jpg" alt="Special" class="img-responsive">  
+                    <img src="img/special-2.jpg" alt="Special" class="img-responsive">  
                     <a href="#">
                       <div class="tm-special-description">
                         <h3 class="tm-special-title">Etiam sit amet</h3>
@@ -265,7 +266,7 @@ http://www.templatemo.com/tm-466-cafe-house
               <div class="tm-special-container-lower">
                 <div class="tm-special-item">
                   <div class="tm-special-img-container">
-                    <img src="../../public/img/special-3.jpg" alt="Special" class="img-responsive">  
+                    <img src="img/special-3.jpg" alt="Special" class="img-responsive">  
                     <a href="#">
                       <div class="tm-special-description">
                         <p>Vivamus elementum</p>
@@ -275,7 +276,7 @@ http://www.templatemo.com/tm-466-cafe-house
                 </div>
                 <div class="tm-special-item">
                   <div class="tm-special-img-container">
-                    <img src="../../public/img/special-4.jpg" alt="Special" class="img-responsive">  
+                    <img src="img/special-4.jpg" alt="Special" class="img-responsive">  
                     <a href="#">
                       <div class="tm-special-description">
                         <p>Quisque rutrum.</p>
@@ -290,14 +291,14 @@ http://www.templatemo.com/tm-466-cafe-house
         <section class="tm-section">
           <div class="row">
             <div class="col-lg-12 tm-section-header-container">
-              <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="../../public/img/logo.png" alt="Logo" class="tm-site-logo"> Daily Menu</h2> 
+              <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Daily Menu</h2> 
               <div class="tm-hr-container"><hr class="tm-hr"></div> 
             </div>  
           </div>          
           <div class="row">
             <div class="tm-daily-menu-container margin-top-60">
               <div class="col-lg-4 col-md-4">
-                <img src="../../public/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">      
+                <img src="img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">      
               </div>            
               <div class="col-lg-8 col-md-8">
                 <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
@@ -362,10 +363,10 @@ http://www.templatemo.com/tm-466-cafe-house
      </div>
    </footer> <!-- Footer content-->  
    <!-- JS -->
-   <script type="text/javascript" src="../../public/js/jquery-1.11.2.min.js"></script>      <!-- jQuery -->
-   <script type="text/javascript" src="../../public/js/templatemo-script.js"></script>      <!-- Templatemo Script -->
-   <script defer src="../../public/js/all.js"></script>
-   <script defer src="../../public/js/index.js"></script>
+   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      <!-- jQuery -->
+   <script type="text/javascript" src="js/templatemo-script.js"></script>      <!-- Templatemo Script -->
+   <script defer src="js/all.js"></script>
+   <script defer src="js/index.js"></script>
 
  </body>
  </html>
