--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -27,15 +27,15 @@ http://www.templatemo.com/tm-466-cafe-house
     <!-- End Preloader -->
     <!-- Cart  -->
     <div class="wrap-cart">
-      <div class="cart" onclick="showHidePopupsCart()">
+      <div class="cart">
         <a><i class="fas fa-shopping-cart icon-cart"></i></a>
         <div class="cart-notify">99</div>
       </div>
     </div>
     <!-- popups  -->
-    <div class="wrap-popups-cart hide" id="popups-cart">
+    <div class="wrap-popups-cart" style="display: none;" id="popups-cart">
       <div class="text-title"><h2>Giỏ hàng</h2></div>
-      <div class="dash-popups" onclick="showHidePopupsCart()"><i class="fas fa-minus-circle"></i></div>
+      <div class="dash-popups"><i class="fas fa-minus-circle"></i></div>
       <div class="popups-cart-content">
         <div class="">
             <div class="table-responsive">
@@ -215,8 +215,8 @@ http://www.templatemo.com/tm-466-cafe-house
    <!-- JS -->
    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      <!-- jQuery -->
    <script type="text/javascript" src="js/templatemo-script.js"></script>      <!-- Templatemo Script -->
-   <script defer src="./js/all.js"></script>
-   <script defer src="./js/index.js"></script>
+   <script src="js/all.js"></script>
+   <script src="js/index.js"></script>
 
  </body>
  </html>
