--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -127,7 +127,7 @@ http://www.templatemo.com/tm-466-cafe-house
     <div class="tm-top-header">
       <div class="container">
         <div class="row">
-          <div class="tm-top-header-inner">
+          <div class="tm-top-header-inner {{flexCenter}}">
             <div class="tm-logo-container">
               <a href="/home">
                 <img src="img/logo.png" alt="Logo" class="tm-site-logo">
