--- a/src/public/css/templatemo-style.css
+++ b/src/public/css/templatemo-style.css
@@ -639,7 +639,7 @@ ol li:before {
 /* Menu */
 .tm-side-menu {
   color: white;
-  width: 242px;
+  width: 100%;
   padding-top: 7px;
   position: relative;
   z-index: 1;
@@ -654,7 +654,7 @@ ol li:before {
 .tm-side-menu li { list-style: none; }
 .tm-side-menu li a {
   color: #7c6a51;
-  padding: 7px;
+  padding: 4.5px;
   display: block;
   -webkit-transition: all 0.3s ease;
           transition: all 0.3s ease;
