--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -125,7 +125,9 @@
                           </a>
                       </div>
                       <div class="col-sm-12 col-md-6 text-right">
+                        <a href="/checkout">
                           <button class="btn btn-lg btn-block btn-success text-uppercase outline">Thanh toán</button>
+                        </a>
                       </div>
                   </div>
               </div>
