--- a/src/public/frontend/css/style.css
+++ b/src/public/frontend/css/style.css
@@ -92,6 +92,9 @@ h2 {
 }
 .container-form {
   position: absolute;
+  top:25%;
+  left: 50%;
+  transform: translate(-50%,-25%);
   width: 600px;
   background: rgb(255, 255, 255);
   margin: 0 auto;
@@ -131,7 +134,13 @@ h2 {
   -webkit-align-items: center;
   -o-align-items: center;
   -ms-align-items: center; }
-
+.social-singin{
+  font-size: 26px;
+}
+.social-singin:hover{
+  transform: scale(1.1);
+  transition-duration: 1s;
+}
 .position-center {
   position: absolute;
   top: 50%;
@@ -203,7 +212,7 @@ figure {
 .signup-form {
   margin-left: 75px;
   margin-right: 75px;
-  padding-left: 34px; }
+}
 
 .register-form {
   width: 100%; }
