--- a/src/views/frontend/home.handlebars
+++ b/src/views/frontend/home.handlebars
@@ -11,18 +11,18 @@
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
             <div class="inline-block shadow-img">
-              <img src="img/1.jpg" alt="Image" class="img-circle img-thumbnail">  
+              <img src="frontend/img/1.jpg" alt="Image" class="img-circle img-thumbnail">  
             </div>              
           </div>            
         </section>          
         <section class="tm-section tm-section-margin-bottom-0 row">
           <div class="col-lg-12 tm-section-header-container">
-            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Popular Items</h2>
+            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo"> Popular Items</h2>
             <div class="tm-hr-container"><hr class="tm-hr"></div>
           </div>
           <div class="col-lg-12 tm-popular-items-container">
             <div class="tm-popular-item">
-              <img src="img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">a</span>mericano</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -32,7 +32,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">c</span>appuccino</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -42,7 +42,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">m</span>ocha</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -55,14 +55,14 @@
         </section>
         <section class="tm-section row">
           <div class="col-lg-12 tm-section-header-container">
-            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Today's Special</h2>
+            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo"> Today's Special</h2>
             <div class="tm-hr-container"><hr class="tm-hr"></div>
           </div>          
           <div class="col-lg-12 tm-special-container margin-top-60">
             <div class="tm-special-container-left"> <!-- left -->
               <div class="tm-special-item">
                 <div class="tm-special-img-container">
-                  <img src="img/special-1.jpg" alt="Special" class="tm-special-img img-responsive">  
+                  <img src="frontend/img/special-1.jpg" alt="Special" class="tm-special-img img-responsive">  
                   <a href="#">
                     <div class="tm-special-description">
                       <h3 class="tm-special-title">Donec pede justo</h3>
@@ -76,7 +76,7 @@
               <div>
                 <div class="tm-special-item">
                   <div class="tm-special-img-container">
-                    <img src="img/special-2.jpg" alt="Special" class="img-responsive">  
+                    <img src="frontend/img/special-2.jpg" alt="Special" class="img-responsive">  
                     <a href="#">
                       <div class="tm-special-description">
                         <h3 class="tm-special-title">Etiam sit amet</h3>
@@ -89,7 +89,7 @@
               <div class="tm-special-container-lower">
                 <div class="tm-special-item">
                   <div class="tm-special-img-container">
-                    <img src="img/special-3.jpg" alt="Special" class="img-responsive">  
+                    <img src="frontend/img/special-3.jpg" alt="Special" class="img-responsive">  
                     <a href="#">
                       <div class="tm-special-description">
                         <p>Vivamus elementum</p>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="tm-special-item">
                   <div class="tm-special-img-container">
-                    <img src="img/special-4.jpg" alt="Special" class="img-responsive">  
+                    <img src="frontend/img/special-4.jpg" alt="Special" class="img-responsive">  
                     <a href="#">
                       <div class="tm-special-description">
                         <p>Quisque rutrum.</p>
@@ -114,14 +114,14 @@
         <section class="tm-section">
           <div class="row">
             <div class="col-lg-12 tm-section-header-container">
-              <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Daily Menu</h2> 
+              <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo"> Daily Menu</h2> 
               <div class="tm-hr-container"><hr class="tm-hr"></div> 
             </div>  
           </div>          
           <div class="row">
             <div class="tm-daily-menu-container margin-top-60">
               <div class="col-lg-4 col-md-4">
-                <img src="img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">      
+                <img src="frontend/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">      
               </div>            
               <div class="col-lg-8 col-md-8">
                 <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
