--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -11,13 +11,13 @@
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
         <div class="inline-block shadow-img">
-          <img src="img/1.jpg" alt="Image" class="img-circle img-thumbnail">
+          <img src="frontend/img/1.jpg" alt="Image" class="img-circle img-thumbnail">
         </div>
       </div>
     </section>
     <section class="tm-section row">
       <div class="col-lg-12 tm-section-header-container margin-bottom-30">
-        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo"
+        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
             class="tm-site-logo"> Our Menus</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
@@ -31,13 +31,13 @@
 
               </ul>
             </nav>
-            <img src="img/vertical-menu-bg.png" alt="Menu bg" class="tm-side-menu-bg">
+            <img src="frontend/img/vertical-menu-bg.png" alt="Menu bg" class="tm-side-menu-bg">
           </div>
         </div>
         <div class="tm-menu-product-content col-lg-9 col-md-9">
           <!-- menu content -->
           <div class="tm-product">
-            <img src="img/menu-1.jpg" alt="Product">
+            <img src="frontend/img/menu-1.jpg" alt="Product">
             <div class="tm-product-text">
               <h3 class="tm-product-title">Americano 1</h3>
               <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="tm-product">
-            <img src="img/menu-2.jpg" alt="Product">
+            <img src="frontend/img/menu-2.jpg" alt="Product">
             <div class="tm-product-text">
               <h3 class="tm-product-title">Americano 2</h3>
               <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="tm-product">
-            <img src="img/menu-3.jpg" alt="Product">
+            <img src="frontend/img/menu-3.jpg" alt="Product">
             <div class="tm-product-text">
               <h3 class="tm-product-title">Americano 3</h3>
               <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="tm-product">
-            <img src="img/menu-4.jpg" alt="Product">
+            <img src="frontend/img/menu-4.jpg" alt="Product">
             <div class="tm-product-text">
               <h3 class="tm-product-title">Americano 4</h3>
               <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="tm-product">
-            <img src="img/menu-5.jpg" alt="Product">
+            <img src="frontend/img/menu-5.jpg" alt="Product">
             <div class="tm-product-text">
               <h3 class="tm-product-title">Americano 5</h3>
               <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
