--- a/src/views/frontend/today-special.handlebars
+++ b/src/views/frontend/today-special.handlebars
@@ -2,12 +2,12 @@
       <div class="container" id="main">
         <section class="tm-section tm-section-margin-bottom-0 row">
           <div class="col-lg-12 tm-section-header-container">
-            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Popular Items</h2>
+            <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo"> Popular Items</h2>
             <div class="tm-hr-container"><hr class="tm-hr"></div>
           </div>
           <div class="col-lg-12 tm-popular-items-container">
             <div class="tm-popular-item">
-              <img src="img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">a</span>mericano</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -17,7 +17,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">c</span>appuccino</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -27,7 +27,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">m</span>ocha</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -37,7 +37,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-1.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">a</span>mericano</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -47,7 +47,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-2.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">c</span>appuccino</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -57,7 +57,7 @@
               </div>              
             </div>
             <div class="tm-popular-item">
-              <img src="img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="frontend/img/popular-3.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">m</span>ocha</h3><hr class="tm-popular-item-hr">
                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque. sed ipsum.</p>
@@ -71,14 +71,14 @@
         <section class="tm-section">
           <div class="row">
             <div class="col-lg-12 tm-section-header-container">
-              <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="img/logo.png" alt="Logo" class="tm-site-logo"> Daily Menu</h2> 
+              <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo"> Daily Menu</h2> 
               <div class="tm-hr-container"><hr class="tm-hr"></div> 
             </div>  
           </div>          
           <div class="row">
             <div class="tm-daily-menu-container margin-top-60">
               <div class="col-lg-4 col-md-4">
-                <img src="img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">      
+                <img src="frontend/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">      
               </div>            
               <div class="col-lg-8 col-md-8">
                 <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
