--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -13,12 +13,12 @@ http://www.templatemo.com/tm-466-cafe-house
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet'
     type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Damion' rel='stylesheet' type='text/css'>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/all.css" rel="stylesheet">
-  <link href="css/templatemo-style.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link href="frontend/css/bootstrap.min.css" rel="stylesheet">
+  <link href="frontend/css/font-awesome.min.css" rel="stylesheet">
+  <link href="frontend/css/all.css" rel="stylesheet">
+  <link href="frontend/css/templatemo-style.css" rel="stylesheet">
+  <link href="frontend/css/style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="frontend/img/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
@@ -143,7 +143,7 @@ http://www.templatemo.com/tm-466-cafe-house
         <div class="tm-top-header-inner {{flexCenter}}">
           <div class="tm-logo-container">
             <a href="/">
-              <img src="img/logo.png" alt="Logo" class="tm-site-logo">
+              <img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo">
               <h1 class="tm-site-name tm-handwriting-font">Cafe House</h1>
             </a>
           </div>
@@ -169,14 +169,14 @@ http://www.templatemo.com/tm-466-cafe-house
   <section class="tm-welcome-section">
     <div class="container tm-position-relative height-header">
       <div class="tm-lights-container">
-        <img src="img/light.png" alt="Light" class="light light-1">
-        <img src="img/light.png" alt="Light" class="light light-2">
-        <img src="img/light.png" alt="Light" class="light light-3">
+        <img src="frontend/img/light.png" alt="Light" class="light light-1">
+        <img src="frontend/img/light.png" alt="Light" class="light light-2">
+        <img src="frontend/img/light.png" alt="Light" class="light light-3">
       </div>
       {{#if singinup}}
       <div class="row tm-welcome-content">
-        <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="img/header-line.png" alt="Line"
-            class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="img/header-line.png" alt="Line"
+        <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="frontend/img/header-line.png" alt="Line"
+            class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="frontend/img/header-line.png" alt="Line"
             class="tm-header-line"></h2>
         <h2 class="gold-text tm-welcome-header-2">Cafe House</h2>
         <p class="gray-text tm-welcome-description">
@@ -188,7 +188,7 @@ http://www.templatemo.com/tm-466-cafe-house
       {{#if showSingInUp}}
       {{{body}}}
       {{/if}}
-      <img src="img/table-set.png" alt="Table Set" class="tm-table-set img-responsive">
+      <img src="frontend/img/table-set.png" alt="Table Set" class="tm-table-set img-responsive">
     </div>
   </section>
   {{/if}}
@@ -241,10 +241,10 @@ http://www.templatemo.com/tm-466-cafe-house
     </div>
   </footer> <!-- Footer content-->
   <!-- JS -->
-  <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script> <!-- jQuery -->
-  <script type="text/javascript" src="js/templatemo-script.js"></script> <!-- Templatemo Script -->
-  <script src="js/all.js"></script>
-  <script src="js/index.js"></script>
+  <script type="text/javascript" src="frontend/js/jquery-1.11.2.min.js"></script> <!-- jQuery -->
+  <script type="text/javascript" src="frontend/js/templatemo-script.js"></script> <!-- Templatemo Script -->
+  <script src="frontend/js/all.js"></script>
+  <script src="frontend/js/index.js"></script>
 
 </body>
 
