--- a/src/views/backend/blogs.handlebars
+++ b/src/views/backend/blogs.handlebars
@@ -1,15 +1,11 @@
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Danh muc</h1>
+                        <h1 class="mt-4">Bài viết</h1>
                         
                   
-                        <a href="#" class="btn btn-success" style="width: 200px;margin-bottom: 50px;">Them</a>
+                        <a href="#" class="btn btn-success" style="width: 200px;margin-bottom: 50px;">Thêm bài viết</a>
       
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-table me-1"></i>
-                                DataTable Example
-                            </div>
                             <div class="card-body">
                                 <table id="datatablesSimple">
                                     <thead>
