--- a/src/views/frontend/detail.handlebars
+++ b/src/views/frontend/detail.handlebars
@@ -26,14 +26,14 @@
                             <div class="m-bot15"> <strong>Price : </strong> <span class="amount-old">35 VNĐ</span> <span
                                     class="pro-price"> 30 VNĐ</span></div>
                             <div class="form-group">
-                                <label>Size :</label>
+                                <span>Size :</span>
                                 <select name="size" id="size">
                                     <option value="S">S</option>
                                     <option value="M">M</option>
                                     <option value="L">L</option>
                                 </select>
                                 <br>
-                                <label for="sp1">Số lượng</label>
+                                <span for="sp1">Số lượng</span>
                                 <div class="quantity-btn-detail">
                                     <input type="button" value="-" class="arrow" onclick="minus('sp1')" />
                                     <input class="form-control" type="number" id="sp1" value="1" min="1" max="99"
