--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -27,77 +27,22 @@
         <div class="col-lg-3 col-md-3">
           <div class="tm-position-relative margin-bottom-30">
             <nav class="tm-side-menu">
-              <ul id="side-menu">
+              {{!-- <form method="POST" action="http://localhost:5500/products/menu-products"> --}}
+                <ul id="side-menu">
 
-              </ul>
+                </ul>
+                {{!--
+              </form> --}}
             </nav>
             <img src="frontend/img/vertical-menu-bg.png" alt="Menu bg" class="tm-side-menu-bg">
           </div>
         </div>
-        <div class="tm-menu-product-content col-lg-9 col-md-9">
+        <div class="tm-menu-product-content col-lg-9 col-md-9" id="listProducts">
           <!-- menu content -->
-          <div class="tm-product">
-            <img src="frontend/img/menu-1.jpg" alt="Product">
-            <div class="tm-product-text">
-              <h3 class="tm-product-title">Americano 1</h3>
-              <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
-                libero, sit amet adipiscing sem neque. Red ipsum.</p>
-            </div>
-            <div class="tm-product-price">
-              <a href="#" class="tm-product-price-link tm-handwriting-font"><span
-                  class="tm-product-price-currency">$</span>30</a>
-            </div>
-          </div>
-          <div class="tm-product">
-            <img src="frontend/img/menu-2.jpg" alt="Product">
-            <div class="tm-product-text">
-              <h3 class="tm-product-title">Americano 2</h3>
-              <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
-                libero, sit amet adipiscing sem neque. Red ipsum.</p>
-            </div>
-            <div class="tm-product-price">
-              <a href="#" class="tm-product-price-link tm-handwriting-font"><span
-                  class="tm-product-price-currency">$</span>20</a>
-            </div>
-          </div>
-          <div class="tm-product">
-            <img src="frontend/img/menu-3.jpg" alt="Product">
-            <div class="tm-product-text">
-              <h3 class="tm-product-title">Americano 3</h3>
-              <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
-                libero, sit amet adipiscing sem neque. Red ipsum.</p>
-            </div>
-            <div class="tm-product-price">
-              <a href="#" class="tm-product-price-link tm-handwriting-font"><span
-                  class="tm-product-price-currency">$</span>15</a>
-            </div>
-          </div>
-          <div class="tm-product">
-            <img src="frontend/img/menu-4.jpg" alt="Product">
-            <div class="tm-product-text">
-              <h3 class="tm-product-title">Americano 4</h3>
-              <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
-                libero, sit amet adipiscing sem neque. Red ipsum.</p>
-            </div>
-            <div class="tm-product-price">
-              <a href="#" class="tm-product-price-link tm-handwriting-font"><span
-                  class="tm-product-price-currency">$</span>25</a>
-            </div>
-          </div>
-          <div class="tm-product">
-            <img src="frontend/img/menu-5.jpg" alt="Product">
-            <div class="tm-product-text">
-              <h3 class="tm-product-title">Americano 5</h3>
-              <p class="tm-product-description">Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
-                libero, sit amet adipiscing sem neque. Red ipsum.</p>
-            </div>
-            <div class="tm-product-price">
-              <a href="#" class="tm-product-price-link tm-handwriting-font"><span
-                  class="tm-product-price-currency">$</span>45</a>
-            </div>
-          </div>
+
         </div>
       </div>
-    </section>
   </div>
+  </section>
+</div>
 </div>
