--- a/src/views/frontend/signin.handlebars
+++ b/src/views/frontend/signin.handlebars
@@ -5,7 +5,7 @@
             <div class="signin-form">
                 <h2 class="form-title">Sign in</h2>
                 <form method="POST" class="register-form" id="login-form">
-                    <div class="form-group" >
+                    <div class="form-group">
                         <label for="your_name"><i class="icon-singin fas fa-user"></i></label>
                         <input type="text" name="your_name" id="your_name" placeholder="Your Name" />
                     </div>
@@ -34,7 +34,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="/sing-up" class="signup-image-link">Create an account</a>
+                        <a href="/sign-up" class="signup-image-link">Create an account</a>
                     </div>
                 </div>
 
