--- a/src/public/frontend/css/style.css
+++ b/src/public/frontend/css/style.css
@@ -373,6 +373,10 @@ label.valid {
 
   margin: 20px 0;
 }
+.flex-row{
+  display: flex;
+  flex-direction: column;
+}
 .social-login {
   align-items: center;
   -moz-align-items: center;
@@ -504,3 +508,98 @@ label.valid {
     margin-bottom: 10px; } }
 
 /*# sourceMappingURL=style.css.map */
+/* pagination */
+.pagination {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem; }
+
+.page-link {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #fff;
+  background-color: #895001;
+  border: 1px solid rgb(168, 168, 168); }
+  .page-link:hover {
+    z-index: 2;
+    color: #000;
+    text-decoration: none;
+    background-color: #e9ecef;
+    border-color: #dee2e6; }
+  .page-link:focus {
+    z-index: 2;
+    outline: 0;
+    color: #fff;
+    box-shadow: 0 0 0 0.2rem rgba(117, 113, 249, 0.25); }
+  .page-link:not(:disabled):not(.disabled) {
+    cursor: pointer; }
+
+.page-item:first-child .page-link {
+  margin-left: 0;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem; }
+
+.page-item:last-child .page-link {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem; }
+
+.page-item.active .page-link {
+  z-index: 1;
+  color: #fff;
+  background-color: #4f3913;
+  border-color: #4f3913; }
+
+.page-item.disabled .page-link {
+  color: #f7fafc;
+  pointer-events: none;
+  cursor: auto;
+  background-color: #fff;
+  border-color: #dee2e6; }
+
+.pagination-lg .page-link {
+  padding: 0.75rem 1.5rem;
+  font-size: 1.09375rem;
+  line-height: 1.5; }
+
+.pagination-lg .page-item:first-child .page-link {
+  border-top-left-radius: 0.3rem;
+  border-bottom-left-radius: 0.3rem; }
+
+.pagination-lg .page-item:last-child .page-link {
+  border-top-right-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem; }
+
+.pagination-sm .page-link {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.76563rem;
+  line-height: 1.5; }
+
+.pagination-sm .page-item:first-child .page-link {
+  border-top-left-radius: 0.2rem;
+  border-bottom-left-radius: 0.2rem; }
+
+.pagination-sm .page-item:last-child .page-link {
+  border-top-right-radius: 0.2rem;
+  border-bottom-right-radius: 0.2rem; }
+
+.page-item.disabled .page-link {
+  color: #bbbbbb; }
+
+.page-item .page-link:focus {
+  box-shadow: none; }
+#pagination-wrap{
+  position: absolute;
+  right: 15px;
+  top: 50px;
+}
+.relative{
+  position: relative;
+}
+#list-products-height{
+  margin-bottom: 0px;
+  min-height: 680px;
+}
