--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -15,7 +15,7 @@
         </div>
       </div>
     </section>
-    <section class="tm-section row">
+    <section class="tm-section row relative" id="list-products-height">
       <div class="col-lg-12 tm-section-header-container margin-bottom-30">
         <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
             class="tm-site-logo"> Our Menus</h2>
@@ -40,6 +40,14 @@
         <div class="tm-menu-product-content col-lg-9 col-md-9" id="listProducts">
           <!-- menu content -->
 
+        </div>
+        <div id="pagination-wrap">
+          <nav>
+            <ul class="pagination" id="pagination">
+
+            </ul>
+          </nav>
+          <h2>{{{pages}}}</h2>
         </div>
       </div>
   </div>
