--- a/src/views/frontend/home.handlebars
+++ b/src/views/frontend/home.handlebars
@@ -7,7 +7,7 @@
         <p class="tm-welcome-description">
           Tóm lại cafe ngon không nói nhiều nhé
         </p>
-        <a href="#" class="tm-more-button margin-top-30">Xem thêm</a>
+        <a href="#" class="tm-more-button margin-top-30">Read more</a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
         <div class="inline-block shadow-img">
@@ -18,7 +18,7 @@
     <section class="tm-section tm-section-margin-bottom-0 row">
       <div class="col-lg-12 tm-section-header-container">
         <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-            class="tm-site-logo">Nổi bật</h2>
+            class="tm-site-logo">Popular Items</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
         </div>
@@ -30,7 +30,7 @@
     <section class="tm-section row">
       <div class="col-lg-12 tm-section-header-container">
         <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-            class="tm-site-logo">Hôm nay xem gì ?</h2>
+            class="tm-site-logo">Today's Special</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
         </div>
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col-lg-12 tm-section-header-container">
           <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-              class="tm-site-logo">Nay có gì ngon ?</h2>
+              class="tm-site-logo">Daily Menu</h2>
           <div class="tm-hr-container">
             <hr class="tm-hr">
           </div>
@@ -116,7 +116,7 @@
               <li>Maecenas nec odio et ante tincidunt tempus.</li>
               <li>Donec vitae sapien ut libero ventenatis faucibus.</li>
             </ol>
-            <a href="#" class="tm-more-button margin-top-30">Xem thêm</a>
+            <a href="#" class="tm-more-button margin-top-30">Read more</a>
           </div>
         </div>
       </div>
