--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -18,7 +18,7 @@
     <section class="tm-section row relative" id="list-products-height">
       <div class="col-lg-12 tm-section-header-container margin-bottom-30">
         <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-            class="tm-site-logo">Menu</h2>
+            class="tm-site-logo">Our Menu</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
         </div>
