--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -159,7 +159,7 @@ ul {
 * { font-family: 'Open Sans', sans-serif; }
 .container { max-width: 960px;}
 .height-header {min-height: 980px;}
-.tm-handwriting-font { font-family: 'Dancing Script', cursive; }
+.tm-handwriting-font { font-family: 'Damion', cursive; }
 .fontPacifico{font-family: 'Pacifico', cursive;}
 .tm-top-header {
   background: black;
