--- a/src/views/frontend/contact.handlebars
+++ b/src/views/frontend/contact.handlebars
@@ -1,7 +1,7 @@
 <div class="tm-main-section light-gray-bg">
   <div class="container" id="main">
     <section class="tm-section row">
-      <h2 class="col-lg-12 margin-bottom-30">Gửi tin nhắn cho chúng tôi</h2>
+      <h2 class="col-lg-12 margin-bottom-30">Send us a message</h2>
       <form action="#" method="post" class="tm-contact-form">
         <div class="col-lg-6 col-md-6">
           <div class="form-group">
@@ -17,7 +17,7 @@
             <textarea id="contact_message" class="form-control-concat" rows="6" placeholder="MESSAGE"></textarea>
           </div>
           <div class="form-group">
-            <button class="tm-more-button" type="submit" name="submit">Gửi</button>
+            <button class="tm-more-button" type="submit" name="submit">Send message</button>
           </div>
         </div>
         <div class="col-lg-6 col-md-6">
