--- a/src/views/frontend/today-special.handlebars
+++ b/src/views/frontend/today-special.handlebars
@@ -3,7 +3,7 @@
     <section class="tm-section tm-section-margin-bottom-0 row">
       <div class="col-lg-12 tm-section-header-container">
         <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-            class="tm-site-logo">Nổi bật</h2>
+            class="tm-site-logo">Popular Items</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
         </div>
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-lg-12 tm-section-header-container">
           <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-              class="tm-site-logo">Nay có gì ngon</h2>
+              class="tm-site-logo">Today's Special</h2>
           <div class="tm-hr-container">
             <hr class="tm-hr">
           </div>
@@ -38,7 +38,7 @@
               <li>Maecenas nec odio et ante tincidunt tempus.</li>
               <li>Donec vitae sapien ut libero ventenatis faucibus.</li>
             </ol>
-            <a href="#" class="tm-more-button margin-top-30">Xem thêm</a>
+            <a href="#" class="tm-more-button margin-top-30">Read more</a>
           </div>
         </div>
       </div>
