--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -37,6 +37,66 @@ http://www.templatemo.com/tm-466-cafe-house
     <div class="loader-section section-right"></div>
   </div>
   <!-- End Preloader -->
+  <div class="tm-top-header">
+    <div class="container">
+      <div class="row">
+        <div class="tm-top-header-inner {{flexCenter}}">
+          <div class="tm-logo-container">
+            <a href="/">
+              <img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo">
+              <h1 class="tm-site-name tm-handwriting-font">Cafe House</h1>
+            </a>
+          </div>
+          <div class="mobile-menu-icon">
+            <i class="fa fa-bars"></i>
+          </div>
+          {{#if singinup}}
+          <nav class="tm-nav">
+            <ul>
+              <li><a href="/" class="{{#if home }} active {{/if}}">Home</a></li>
+              <li><a href="/today-special" class="{{#if todayspecial  }} active {{/if}}">Today Special</a></li>
+              <li><a href="/menu" class="{{#if menu }} active {{/if}}">Menu</a></li>
+              <li><a href="/contact" class="{{#if contact }} active {{/if}}">Contact</a></li>
+              <li><a href="/sign-in"><i class="fas fa-user icon"></i></a></li>
+            </ul>
+          </nav>
+          {{/if}}
+        </div>
+      </div>
+    </div>
+  </div>
+  {{#if showHeader}}
+  <section class="tm-welcome-section">
+    <div class="container tm-position-relative height-header">
+      <div class="tm-lights-container">
+        <img src="frontend/img/light.png" alt="Light" class="light light-1">
+        <img src="frontend/img/light.png" alt="Light" class="light light-2">
+        <img src="frontend/img/light.png" alt="Light" class="light light-3">
+      </div>
+      {{#if singinup}}
+      <div class="row tm-welcome-content">
+        <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="frontend/img/header-line.png" alt="Line"
+            class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="frontend/img/header-line.png" alt="Line"
+            class="tm-header-line"></h2>
+        <h2 class="gold-text tm-welcome-header-2">Cafe House</h2>
+        <p class="gray-text tm-welcome-description" id="description" style="height: 90px;">
+          Every day, across the globe, our partners support the communities in our stores and the neighborhoods we are a
+          part of. From open mic nights to service projects to spreading messages of hope, we are making our communities
+          stronger.
+        </p>
+        <a href="#main" class="tm-more-button tm-more-button-welcome">Details</a>
+      </div>
+      {{/if}}
+      {{#if showSingInUp}}
+      {{{body}}}
+      {{/if}}
+      <img src="frontend/img/table-set.png" alt="Table Set" class="tm-table-set img-responsive">
+    </div>
+  </section>
+  {{/if}}
+  {{#if singinup}}
+  {{{body}}}
+  {{/if}}
   <!-- Cart  -->
   {{#if showHeader}}
   {{#if showCart}}
@@ -145,82 +205,22 @@ http://www.templatemo.com/tm-466-cafe-house
   </div>
   {{/if}}
   {{/if}}
-  <div class="tm-top-header">
-    <div class="container">
-      <div class="row">
-        <div class="tm-top-header-inner {{flexCenter}}">
-          <div class="tm-logo-container">
-            <a href="/">
-              <img src="frontend/img/logo.png" alt="Logo" class="tm-site-logo">
-              <h1 class="tm-site-name tm-handwriting-font">Cafe House</h1>
-            </a>
-          </div>
-          <div class="mobile-menu-icon">
-            <i class="fa fa-bars"></i>
-          </div>
-          {{#if singinup}}
-          <nav class="tm-nav">
-            <ul>
-              <li><a href="/" class="{{#if home }} active {{/if}}">Home</a></li>
-              <li><a href="/today-special" class="{{#if todayspecial  }} active {{/if}}">Today Special</a></li>
-              <li><a href="/menu" class="{{#if menu }} active {{/if}}">Menu</a></li>
-              <li><a href="/contact" class="{{#if contact }} active {{/if}}">Contact</a></li>
-              <li><a href="/sign-in"><i class="fas fa-user icon"></i></a></li>
-            </ul>
-          </nav>
-          {{/if}}
-        </div>
-      </div>
-    </div>
-  </div>
-  {{#if showHeader}}
-  <section class="tm-welcome-section">
-    <div class="container tm-position-relative height-header">
-      <div class="tm-lights-container">
-        <img src="frontend/img/light.png" alt="Light" class="light light-1">
-        <img src="frontend/img/light.png" alt="Light" class="light light-2">
-        <img src="frontend/img/light.png" alt="Light" class="light light-3">
-      </div>
-      {{#if singinup}}
-      <div class="row tm-welcome-content">
-        <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="frontend/img/header-line.png" alt="Line"
-            class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="frontend/img/header-line.png" alt="Line"
-            class="tm-header-line"></h2>
-        <h2 class="gold-text tm-welcome-header-2">Cafe House</h2>
-        <p class="gray-text tm-welcome-description" id="description" style="height: 90px;">
-          Every day, across the globe, our partners support the communities in our stores and the neighborhoods we are a
-          part of. From open mic nights to service projects to spreading messages of hope, we are making our communities
-          stronger.
-        </p>
-        <a href="#main" class="tm-more-button tm-more-button-welcome">Chi tiết</a>
-      </div>
-      {{/if}}
-      {{#if showSingInUp}}
-      {{{body}}}
-      {{/if}}
-      <img src="frontend/img/table-set.png" alt="Table Set" class="tm-table-set img-responsive">
-    </div>
-  </section>
-  {{/if}}
-  {{#if singinup}}
-  {{{body}}}
-  {{/if}}
   <footer>
     <div class="tm-black-bg">
       <div class="container">
         <div class="row margin-bottom-60">
           <nav class="col-lg-3 col-md-3 tm-footer-nav tm-footer-div">
-            <h3 class="tm-footer-div-title">Menu chính</h3>
+            <h3 class="tm-footer-div-title">MAIN MENU</h3>
             <ul>
-              <li><a href="#">Trang chủ</a></li>
-              <li><a href="#">Về chúng tôi</a></li>
-              <li><a href="#">Menu ngày</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Today special</a></li>
               <li><a href="#">Menu</a></li>
-              <li><a href="#">Tài khoản</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Account</a></li>
             </ul>
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
-            <h3 class="tm-footer-div-title">Về chúng tôi</h3>
+            <h3 class="tm-footer-div-title">About Us</h3>
             <p class="margin-top-15">
               Chúng tôi là cafe Trung Nguyên nguyên chất 99,99%
             </p>
@@ -229,7 +229,7 @@ http://www.templatemo.com/tm-466-cafe-house
             </p>
           </div>
           <div class="col-lg-4 col-md-4 tm-footer-div">
-            <h3 class="tm-footer-div-title">Liên hệ</h3>
+            <h3 class="tm-footer-div-title">Get Social</h3>
             <p>Liên hệ chúng tôi qua các hình thức sau</p>
             <div class="tm-social-icons-container">
               <a href="#" class="tm-social-icon"><i class="fab fa-facebook-f"></i></a>
