--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -24,8 +24,8 @@ http://www.templatemo.com/tm-466-cafe-house
   <link href="frontend/css/bootstrap.min.css" rel="stylesheet">
   <link href="frontend/css/font-awesome.min.css" rel="stylesheet">
   <link href="frontend/css/all.css" rel="stylesheet">
-  <link href="frontend/css/templatemo-style.css" rel="stylesheet">
-  <link href="frontend/css/style.css" rel="stylesheet">
+  <link href="frontend/css/templatemo-style.css" rel="stylesheet" type="text/css">
+  <link href="frontend/css/style.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="frontend/img/favicon.ico" type="image/x-icon" />
 </head>
 
